--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
 body {
-  background-color: #f4eeff;
-  margin: 0px;
+  width: 75%;
+  background-color: #f7f2e8;
+  margin: 0px auto;
   font-family: 'Poppins';
 }
