--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -2,33 +2,49 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #424874;
-  box-shadow: 0px 0px 5px;
+}
+
+.headerTitleLink {
+  text-decoration: none;
 }
 
 .headerTitle {
-  display: flex;
-  align-items: center;
-  gap: 25px;
-  font-size: 30px;
-  margin-left: 10px;
-  color: #424874;
+  display: inline-block;
+  color: #1a1a1a;
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.headerIcon {
+  display: inline-block;
 }
 
 .headerLink {
-  display: inline-block;
+  color: #3c0e0e;
   font-size: 20px;
+  font-weight: 500;
   text-decoration: none;
-  color: #424874;
-  padding: 10px 20px;
-  margin-right: 10px;
-}
-
-.headerLink:last-child {
-  margin-right: 0px;
 }
 
 .headerLink:hover {
-  background-color: #dcd6f7;
-  transition: 0.75s;
+  text-decoration: underline;
+}
+
+.headerIconAndTitle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.headerLinks {
+  display: flex;
+  gap: 25px;
+  align-items: center;
+}
+
+.headerEmail {
+  color: #3c0e0e;
+  font-size: 15px;
+  font-weight: 500;
+  text-align: center;
 }
