restyle web, change content

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 body {
   width: 75%;
-  background-color: #f7f2e8;
+  background-color: #000000;
   margin: 0px auto;
   font-family: 'Poppins';
 }
