--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -25,15 +25,15 @@
 }
 
 .containerTitle {
-  color: #282828;
-  font-size: 20px;
+  color: #f7f2e8;
+  font-size: 15px;
   font-weight: 500;
   padding-bottom: 10px;
 }
 
 .containerDescription {
-  color: #431b1b;
-  font-size: 16px;
+  color: #f7f2e8;
+  font-size: 10px;
   font-weight: 400;
   line-height: 2;
 }
@@ -45,4 +45,5 @@
 
 .footerIcon {
   margin: auto 0px;
+  color: #f7f2e8;
 }
