--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -2,25 +2,28 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .headerTitleLink {
   text-decoration: none;
 }
 
+.headerIcon {
+  color: #da22ff;
+  padding-right: 25px;
+}
+
 .headerTitle {
   display: inline-block;
-  color: #1a1a1a;
-  font-size: 24px;
+  color: #f7f2e8;
+  font-size: 25px;
   font-weight: 500;
 }
 
-.headerIcon {
-  display: inline-block;
-}
-
 .headerLink {
-  color: #3c0e0e;
+  color: #f7f2e8;
   font-size: 20px;
   font-weight: 500;
   text-decoration: none;
@@ -43,7 +46,7 @@
 }
 
 .headerEmail {
-  color: #3c0e0e;
+  color: #f7f2e8;
   font-size: 15px;
   font-weight: 500;
   text-align: center;
