--- a/src/auth/LoginPage.module.css
+++ b/src/auth/LoginPage.module.css
@@ -1,7 +1,15 @@
-.input {
+.inputOne {
   background-color: #222222;
   color: #f7f2e8;
-  margin-bottom: 25px;
+  padding: 10px;
+  border-radius: 100px;
+  border: none;
+}
+
+.inputTwo {
+  background-color: #222222;
+  color: #f7f2e8;
+  margin-top: 25px;
   padding: 10px;
   border-radius: 100px;
   border: none;
@@ -15,6 +23,7 @@
     #da22ff 100%
   );
   padding: 10px 25px;
+  margin-top: 25px;
   text-transform: uppercase;
   transition: 0.5s;
   background-size: 200% auto;
@@ -27,4 +36,8 @@
   background-position: right center;
   color: #f7f2e8;
   cursor: pointer;
+}
+
+.error {
+  color: #9733ee;
 }
