style login and regsiter pages, fix formik validations, update homepage

--- a/src/auth/GoogleLogin.module.css
+++ b/src/auth/GoogleLogin.module.css
@@ -1,3 +1,10 @@
 .title {
   color: #f7f2e8;
+  font-size: 20px;
+}
+
+.googleButton {
+  background-color: #000000;
+  border: none;
+  cursor: pointer;
 }
