--- a/src/auth/RegisterPage.module.css
+++ b/src/auth/RegisterPage.module.css
@@ -15,7 +15,7 @@
   border: none;
 }
 
-.loginButton {
+.registerButton {
   background-color: #da22ff;
   padding: 10px 30px;
   margin-top: 25px;
@@ -27,10 +27,11 @@
   border: none;
 }
 
-.loginButton:hover {
+.registerButton:hover {
   cursor: pointer;
 }
 
 .error {
   color: #da22ff;
+  margin: 0px;
 }
