--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,12 +1,12 @@
 .footer {
-  width: 75%;
-  margin: auto;
-  position: fixed;
-  bottom: 0;
   display: flex;
+  bottom: 0;
   align-items: center;
   justify-content: space-between;
   padding-bottom: 25px;
+  margin-top: auto;
+  position: relative;
+  bottom: 0;
 }
 
 .informationContainer {
