--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   bottom: 0;
-  align-items: center;
+  align-items: start;
   justify-content: space-between;
   padding-bottom: 25px;
   margin-top: auto;
@@ -35,7 +35,20 @@
   color: #f7f2e8;
   font-size: 10px;
   font-weight: 400;
-  line-height: 2;
+}
+
+.containerDescriptionSpecial {
+  color: #f7f2e8;
+  font-size: 10px;
+  font-weight: 400;
+  margin-top: 50px;
+}
+
+.containerDescriptionEdit {
+  color: #f7f2e8;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 1.75;
 }
 
 .footerContact {
@@ -46,4 +59,10 @@
 .footerIcon {
   margin: auto 0px;
   color: #f7f2e8;
+}
+
+@media only screen and (max-width: 650px) {
+  .containerDescriptionSpecial {
+    display: none;
+  }
 }
