--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,104 @@ body {
   margin: auto;
   text-align: center;
 }
+
+.bm-burger-button {
+  display: none;
+  position: absolute;
+  width: 35px;
+  height: 30px;
+  right: 35px;
+  top: 35px;
+}
+
+.bm-burger-bars {
+  background: #da22ff;
+}
+
+.bm-burger-bars-hover {
+  background: #a90000;
+}
+
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+.bm-cross {
+  background: #bdc3c7;
+}
+
+.bm-menu-wrap {
+  position: fixed;
+  height: 100%;
+}
+
+.bm-menu {
+  background: #000000;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+
+.bm-item {
+  display: inline-block;
+  color: #d1d1d1;
+  margin-bottom: 10px;
+  text-align: left;
+  text-decoration: none;
+  transition: color 0.2s;
+}
+
+.bm-item:hover {
+  color: #ffffff;
+}
+
+.bm-overlay {
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.errorContainer {
+  margin: auto;
+  text-align: center;
+  min-height: 70vh;
+  text-align: center;
+}
+
+.miniErrorContainer {
+  position: absolute;
+  margin: auto;
+  transform: translate(-50%, 30%);
+  bottom: 50%;
+  left: 50%;
+}
+
+.error404 {
+  color: #f7f2e8;
+  font-size: 75px;
+  text-align: center;
+  margin-bottom: 0px;
+}
+
+.pageNotFound {
+  color: #f7f2e8;
+  font-size: 50px;
+  text-align: center;
+  margin-top: 0px;
+}
+
+@media only screen and (max-width: 875px) {
+  .bm-burger-button {
+    display: block;
+  }
+  .headerLinks {
+    display: none;
+  }
+}
