--- a/src/components/addShop/AddShop.module.css
+++ b/src/components/addShop/AddShop.module.css
@@ -31,6 +31,7 @@
   padding: 0px;
   border: none;
   width: 100%;
+  height: 100px;
 }
 
 .error {
@@ -42,6 +43,7 @@
   background-color: #da22ff;
   padding: 10px 30px;
   margin-top: 25px;
+  margin-bottom: 25px;
   font-size: 15px;
   text-transform: uppercase;
   font-weight: bold;
