--- a/src/components/shops/AddCardList.module.css
+++ b/src/components/shops/AddCardList.module.css
@@ -2,3 +2,23 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
+
+@media only screen and (max-width: 1350px) {
+  .articleElements {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  .articleElements {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media only screen and (max-width: 675px) {
+  .articleElements {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
