--- a/src/components/shops/SingleShopCard.module.css
+++ b/src/components/shops/SingleShopCard.module.css
@@ -2,16 +2,20 @@
   list-style-type: none;
   color: #f7f2e8;
   text-align: center;
-  border: 5px solid #f7f2e8;
+  border: 2.5px solid #f7f2e8;
   border-radius: 25px;
   overflow: hidden;
-  width: 70%;
+  width: 75%;
   margin: 0px auto 50px auto;
 }
 
 .shopImage {
-  width: 250px;
-  height: 250px;
+  width: 100%;
+  height: 100%;
+}
+.articleHead {
+  height: 40%;
+  max-height: 250px;
 }
 
 .shopName {
@@ -46,8 +50,24 @@
   justify-items: center;
   background-color: #da22ff;
   margin: 0px auto 10px auto;
-  width: 90%;
   border-radius: 5px;
+  word-wrap: break-word;
+  width: 90%;
+}
+
+.descriptionContainerSpecial {
+  display: flex;
+  flex-direction: column;
+}
+
+.description {
+  margin: 10px;
+}
+
+.descriptionValue {
+  margin: 0px auto 10px auto;
+  max-width: 90%;
+  word-break: break-word;
 }
 
 .button {
@@ -59,7 +79,7 @@
   color: #f7f2e8;
   border-radius: 25px;
   border: none;
-  margin: 25px 0px;
+  margin-top: 25px;
 }
 
 .button:hover {
