--- a/src/components/shops/SingleShopCard.module.css
+++ b/src/components/shops/SingleShopCard.module.css
@@ -14,8 +14,9 @@
   height: 100%;
 }
 .articleHead {
-  height: 40%;
+  height: 50%;
   max-height: 250px;
+  padding-bottom: 10px;
 }
 
 .shopName {
@@ -79,7 +80,7 @@
   color: #f7f2e8;
   border-radius: 25px;
   border: none;
-  margin-top: 25px;
+  margin-bottom: 20px;
 }
 
 .button:hover {
